# greetings-0.1.0.0

./: .gitignore  Cargo.toml  Setup.hs  greetings.cabal
src/: Greetings.hs  lib.rs
