cabal-version:      2.4
name:               greetings
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yvan Sraka
maintainer:         yvan@sraka.xyz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: Cargo.toml Cargo.lock src/lib.rs

build-type:         Custom
custom-setup
    setup-depends:    Cabal, base, directory, process

library
    exposed-modules:  Greetings

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
    -- https://cabal.readthedocs.io/en/3.4/cabal-package.html#pkg-field-extra-bundled-libraries
    extra-bundled-libraries: hello
